fix: clickable link to provider summary anchor

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -37,10 +37,11 @@
 
     <div class="columns">
       <div class="column is-four-fifths is-offset-1">
+      <a id="providerSummary"></a>
     <article class="message is-primary">
       <div class="message-header">
-        <p><span class="icon has-text-info">
-        <i class="fas fa-info-circle"></i>
+        <p><span class="icon has-text-info"><a href="#providerSummary">
+        <i class="fas fa-info-circle"></i></a>
         </span>Provider Summary for {{provider}}</p>
       </div>
       <div class="message-body">
