--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>APIs.guru - API Landing Pages</title>
-    <meta name="description" content="Wikipedia for REST APIs"/>
-    <meta name="robots" content="index,follow">
-    <meta name="author" content="APIs.guru">
+    <meta name="description" content="Wikipedia for REST APIs" />
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="APIs.guru" />
     <style>
       body {
         padding: 20px;
@@ -23,4 +23,3 @@
     </ul>
   </body>
 </html>
-
